# kiwi-agent

./: .env.example  ENVIRONMENT_SETUP.md  FASTAPI_OPTIONAL_DEPENDENCY.md  FRONTEND_OPTIMIZATION.md  README.md  langgraph.json  pyproject.toml  pytest.ini  run_frontend_demo.py  test_env_config.py
.github/workflows/: README.md  code-quality.yml  dependency-update.yml  integration-tests.yml  release.yml  security.yml  unit-tests.yml
docs/: AD.md  BRD.md  C4_Model.md  DATA_ENCRYPTION.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_UPDATE_SUMMARY.md  FASTAPI_OPTIONAL_COMPLETION_SUMMARY.md  INSTALLATION.md  PRD.md  PROJECT_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_SUMMARY.md  REACT_AGENT_OPTIMIZATION_SUMMARY.md  SUCCESS_REPORT.md  TESTING_GUIDE.md  WORKFLOW_OPTIMIZATION_REPORT.md  kiwi_openapi.yaml
frontend/: README.md  build.py  package.json  vite.config.js
frontend/src/: chat.html  chat_v3.html
frontend/src/assets/css/: base.css  chat.css  dashboard.css  variables.scss
frontend/src/assets/js/: main.js
frontend/src/assets/js/modules/: api.js  chat.js  utils.js
frontend/src/components/: Button.js  Modal.js  index.js
frontend/src/templates/base/: index.html
frontend/src/templates/chat/: chat.html  chat_old.html
frontend/src/templates/dashboard/: dashboard.html
scripts/: asyncio_test.py  check_app_status.sh  check_optional_fastapi.py  chroma_client.py  demo_optional_fastapi.py  duckdb_client.py  duckdb_init.sql  duckdb_init_backup.sql  graph_client.py  run_frontend_demo.py  run_tests.py  test_env_config.py  test_frontend.py
scripts/init_db/: init_sqlie_db.py  kiwi_sqlite.sql
src/kiwi/: __init__.py  base.py  chromadb_vector.py  config.py  frontend_integration.py  graph_app.py  kiwi_app.py  openai_chat.py  run_react_app.py  utils.py
src/kiwi/core/: __init__.py  base.py  chromadb_vector.py  langchain_chat.py
src/kiwi/embedding/: __init__.py  onnx_mini_lm_l6_v2.py
src/kiwi/fastapi/: agent_app.py  models.py  routers.py
src/kiwi/fastapi/auth/: __init__.py  auth.py
src/kiwi/fastapi/cache/: __init__.py  cache.py
src/kiwi/fastapi/datasource/: base.py
src/kiwi/flask_app/: __init__.py  frontend_app.py  kiwi_flask_app.py
src/kiwi/react_agent/: __init__.py  configuration.py  cust_graph.py  graph.py  index_graph.py  prompts.py  retrieval.py  retrieval_graph.py  state.py  tools.py  utils.py
src/kiwi/react_app/: __init__.py  customer_graph.py  graph.py  routes.py
src/kiwi/react_app/templates/: index.html  index1.html  index2.html  index3.html
src/react_agent/: configuration.py  graph.py  tools.py
tests/: __init__.py  comparison_test.py  conftest.py  simple_test.py  test_environment_config.py  test_integration.py  test_security.py  test_tools.py
tests/unit_tests/: test_imports.py
training_data/sqlite/: Chinook_Sqlite.sql
training_data/tpch/: questions.json
